crates/service/tests/code_action/snapshots/features__code_action__extract_export__ident.snap
---
source: crates/service/tests/code_action/extract_export.rs
expression: response
---
[
  {
    "title": "Extract export as a module field",
    "kind": "refactor.extract",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 14
              },
              "end": {
                "line": 2,
                "character": 26
              }
            },
            "newText": ""
          },
          {
            "range": {
              "start": {
                "line": 3,
                "character": 8
              },
              "end": {
                "line": 3,
                "character": 8
              }
            },
            "newText": "\n  (export \"f\" (func $func))"
          }
        ]
      }
    }
  }
]
